fix mail list active item flickering behaviour

--- a/public/js/ngApp/components/dashboard-resources-emailTemplates/mail-templates.scss
+++ b/public/js/ngApp/components/dashboard-resources-emailTemplates/mail-templates.scss
@@ -145,4 +145,12 @@
     .template-detail-name-column {
       width: 130px;
     }
+    
+    #mail-template-list {
+      .form-control.inactive {
+        border: none;
+        box-shadow: none;
+        width: 250px;
+      }
+    }
 }
